ny testning och förenkling av kod